--- a/settings.ini
+++ b/settings.ini
@@ -1,5 +1,11 @@
 [main]
-filename = 
+filename = C:/Python36/Scripts/ETH Tester/Send data.xls
 cnt_position = 9
-log = False
+max_rx_length = 20000
+txt_filename = receive.txt
+last_client_address = 192.168.000.234
+last_udp_client_port = 7798
+last_udp_server_port = 7798
+last_tcp_client_port = 7700
+last_tcp_server_port = 7700
 
